simple-flask-app/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-flask-app
  labels:
    app: simple-flask-app
spec:
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app: simple-flask-app
  template:
    metadata:
      labels:
        app: simple-flask-app
    spec:
      containers:
      - name: simple-flask-app
        image: nicus98/simple-flask-app:e6952c9
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 30
          timeoutSeconds: 3
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
