simple-flask-app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-flask-app
spec:
  type: ClusterIP
  selector:
    app: simple-flask-app
  ports:
  - port: 80
    targetPort: 5000
